--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "fdrandom",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Max speed and quality deterministic random number generator, distributions and shuffle",
   "main": "Fdrandom.js",
   "scripts": {
     "test": "require('fdrandom'); Fdrandom.next()==0.7140652210025094"
   },
-	"tonicExample": "require("fdrandom"); Fdrandom.hot().mixof(['la','lah ',' La'],'Sha',10)",
+	"tonicExample": "require('fdrandom'); Fdrandom.hot().mixof(['la','lah ',' La'],'Sha',10)",
   "repository": {
     "type": "git",
     "url": "git+https://strainer:azsplo0@github.com/strainer/Fdrandom.js.git"
