--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Max speed and quality deterministic random number generator, distributions and shuffle",
   "main": "Fdrandom.js",
   "scripts": {
-    "test": "require('fdrandom'); Fdrandom.next()==0.7140652210025094"
+    "test": "require('fdrandom').next()==0.7140652210025094"
   },
-	"tonicExample": "require('fdrandom'); Fdrandom.hot().mixof(['la','lah ',' La'],'Sha',10)",
+	"tonicExample": "require('fdrandom').hot().mixof( ['la','lah ',' La'], 'Sha', 10 )",
   "repository": {
     "type": "git",
     "url": "git+https://strainer:azsplo0@github.com/strainer/Fdrandom.js.git"
