--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "tonicExample": "require('fdrandom').hot().antisort(false,['the','be','that','not','to','be','or','is','to','question'],0,3).join(' ')",
   "repository": {
     "type": "git",
-    "url": "git+https://strainer:azsplo0@github.com/strainer/Fdrandom.js.git"
+    "url": "git+https://strainer:howthehelldoesthisgohere@github.com/strainer/Fdrandom.js.git"
   },
   "keywords": [
     "prng",
