--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fdrandom",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "description": "Fast deterministic random methods. Includes Uniform, Gaussian, gaming distributions, shuffles and antisort",
   "main": "Fdrandom.js",
   "scripts": {
@@ -9,12 +9,15 @@
   "tonicExample": "require('fdrandom').hot().antisort(false,['the','be','that','not','to','be','or','is','to','question'],0,3).join(' ')",
   "repository": {
     "type": "git",
-    "url": "git+https://strainer:howthehelldoesthisgohere@github.com/strainer/Fdrandom.js.git"
+    "url": "git+https://github.com/strainer/Fdrandom.js.git"
   },
   "keywords": [
     "prng",
     "seedable",
+    "fast",
     "deterministic",
+    "distribution",
+    "variate",
     "gaussian",
     "normal",
     "game",
